--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="landscape">
@@ -24,17 +23,15 @@
         </activity>
         <activity
             android:name=".activity.FazhiActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.ChuxingActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.ShenghuoActivity"
             android:screenOrientation="landscape">
             android:screenOrientation="landscape">
         </activity>
-
-
         <activity
             android:name=".activity.HongLvDengActivity"
             android:screenOrientation="landscape" />
@@ -44,13 +41,13 @@
         <activity
             android:name=".activity.SJFXActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activity.WeatherInformationActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".activity.YijianActivity" />
+        <activity android:name=".activity.WodeyijinaActivity"></activity>
     </application>
 
 </manifest>
